2005-08-08  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/mq.c: Use registry.c functions.

	* skins/posix/registry.c: attempt of generic support for
	open/close/unlink factored-out of mqueues implementation.

	* skins/posix/clock.c: remove check for NULL pointers.
	(clock_nanosleep): better error statuses, handle timer nucleus
	clock wrap-around correctly.

2005-08-07  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/syscall.h: Add forced fast syscall
	access directly branching to the VSYSCALL DSO for NPTL-enabled
	platforms.

2005-08-06  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_lock_timers): Do not elapse outstanding
	timers while undergoing a debugging break state; this makes using
	GDB breakpoints on timed threads much more easier.

	* skins/rtai/alarm.c: Fix rt_alarm_create() documentation.

2005-08-05  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (rt_intr_handler, rt_alarm_handler): Export
	so that kernel-based ISR or alarm handlers can synchronize with
	user-space waiters through rt_intr/alarm_wait().
	(__rt_bind_helper): Rewrite so that we use the proper placeholder
	type.

	* skins/rtai/intr.c (__intr_read_proc): Add /proc export
	information.

	* skins/rtai/lib/intr.c (rt_intr_bind): Fix binding key.

2005-08-04  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtdm/module.c (rtdm_skin_init): Fix compilation in
	!CONFIG_RTAI_OPT_FUSION case.

	* include/nucleus/pod.h: Discard the useless tick handler callback
	from the service table.

	* nucleus/pod.c (xnpod_wait_thread_period): Reset the overrun
	count upon XNBREAK condition.

2005-08-03  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/internal.h (clock_adjust_timeout): Correct behaviour
	in clock wrap case.

2005-08-02  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386, include/nucleus: Finalize dual I-pipe/Adeos support
	for x86.

	* skins/rtdm: Merge RTDM patch level #6.
